add Restaurant controllers

--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,6 +1,6 @@
-database.url=jdbc:hsqldb:file:C:/Java/hsqldb/graduation/graduation
+#database.url=jdbc:hsqldb:file:C:/Java/hsqldb/graduation/graduation
 
-#database.url=jdbc:hsqldb:mem:graduation
+database.url=jdbc:hsqldb:mem:graduation
 database.username=sa
 database.password=
 database.driverClassName=org.hsqldb.jdbcDriver
