--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.babareko</groupId>
   <artifactId>graduation</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
-  <name>graduation Maven Webapp</name>
+  <name>Voting system</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -31,76 +32,17 @@
 
     <!--Cache-->
     <ehcache.version>3.9.2</ehcache.version>
-
     <assertj.version>3.19.0</assertj.version>
+
+    <maven-failsafe-plugin.version>2.5.0</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>2.5.0</maven-surefire-plugin.version>
   </properties>
 
-  <build>
-    <finalName>Voting system</finalName>
-    <defaultGoal>package</defaultGoal>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>14</source>
-          <target>14</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <!--https://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
-        <configuration>
-          <argLine>-Dfile.encoding=UTF-8</argLine>
-        </configuration>
-      </plugin>
-
-      <!-- http://stackoverflow.com/questions/4305935/is-it-possible-to-supply-tomcat6s-context-xml-file-via-the-maven-cargo-plugin#4417945 -->
-      <!-- https://codehaus-cargo.github.io/cargo/Tomcat+9.x.html -->
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven3-plugin</artifactId>
-        <version>1.9.2</version>
-        <configuration>
-          <container>
-            <containerId>tomcat9x</containerId>
-            <systemProperties>
-              <file.encoding>UTF-8</file.encoding>
-              <spring.profiles.active>tomcat</spring.profiles.active>
-            </systemProperties>
-            <dependencies>
-              <dependency>
-                <groupId>org.hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-              </dependency>
-            </dependencies>
-          </container>
-          <configuration>
-            <configfiles>
-              <configfile>
-                <file>src/main/resources/tomcat/context.xml</file>
-                <todir>conf/Catalina/localhost/</todir>
-                <tofile>${project.build.finalName}.xml</tofile>
-              </configfile>
-            </configfiles>
-          </configuration>
-          <deployables>
-            <deployable>
-              <groupId>org.babareko</groupId>
-              <artifactId>graduation</artifactId>
-              <type>war</type>
-              <properties>
-                <context>${project.build.finalName}</context>
-              </properties>
-            </deployable>
-          </deployables>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.5.0</version>
+  </parent>
 
   <dependencies>
     <!-- Logging with SLF4J & LogBack -->
@@ -195,6 +137,17 @@
       </exclusions>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+
+
+
+
+
     <!--Web-->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -206,7 +159,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
-      <version>2.4.2</version>
     </dependency>
 
     <dependency>
@@ -285,49 +237,23 @@
 
   </dependencies>
 
-  <profiles>
-    <profile>
-      <id>hsqldb</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.hsqldb</groupId>
-          <artifactId>hsqldb</artifactId>
-          <version>2.5.1</version>
-        </dependency>
-      </dependencies>
-    </profile>
 
-    <profile>
-      <id>postgres</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.tomcat</groupId>
-          <artifactId>tomcat-jdbc</artifactId>
-          <version>${tomcat.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jul-to-slf4j</artifactId>
-          <version>${slf4j.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-    </profile>
-  </profiles>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.5.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-framework-bom</artifactId>
-        <version>${spring.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 </project>
